Todos os requisitos funcionais OK

--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br" ng-app="imHungryApp">
+<html ng-app="imHungryApp">
 <head>
-  <!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
   <meta charset="UTF-8">
   <meta name="description" content="" />
-  <!-- <link rel="icon" href="imagens/favicon-.png" type="image/png" /> -->
   <title>I'm Hungry!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
   <link href="css/styles.min.css" rel="stylesheet" media="screen" />
@@ -24,67 +20,17 @@
 
   <main>
     <ul class="list-categories">
-      <li class="item">
-        <a href="#">
-          <img src="img/all.svg" alt="" />
+      <li class="item all" >
+        <a ng-click="setGroup(all)">
+          <img src="imgs/categories/all.svg" alt="" />
+          <span class="title-categorie">All</span>
         </a>
       </li>
 
-      <li class="item">
-        <a ng-model="chinese">
-          <img src="img/1.svg" alt="" />
-          <span class="title-categorie">Chinese</span>
-        </a>
-      </li>
-
-      <li class="item">
-        <a href="#">
-          <img src="img/1.svg" alt="" />
-          <span class="title-categorie">Chinese</span>
-        </a>
-      </li>
-
-      <li class="item">
-        <a href="#">
-          <img src="img/1.svg" alt="" />
-          <span class="title-categorie">Chinese</span>
-        </a>
-      </li>
-
-      <li class="item">
-        <a href="#">
-          <img src="img/1.svg" alt="" />
-          <span class="title-categorie">Chinese</span>
-        </a>
-      </li>
-
-      <li class="item">
-        <a href="#">
-          <img src="img/1.svg" alt="" />
-          <span class="title-categorie">Chinese</span>
-        </a>
-      </li>
-
-      <li class="item">
-        <a href="#">
-          <img src="img/1.svg" alt="" />
-          <span class="title-categorie">Chinese</span>
-        </a>
-      </li>
-
-      <li class="item">
-        <a ng-click="setGroup(products[1].cuisine)">
-          <img src="img/1.svg" alt="" />
-          <span class="title-categorie">Chinese</span>
-        </a>
-      </li>
-
-
-
-      <li class="item">
-        <a href="#">
-          <img src="img/1.svg" alt="" />
-          <span class="title-categorie">Chinese</span>
+      <li class="item" ng-repeat="item in categories">
+        <a ng-click="setGroup(item)">
+          <img src="imgs/categories/{{item}}.png" alt="" />
+          <span class="title-categorie">{{item}}</span>
         </a>
       </li>
     </ul>
@@ -93,23 +39,16 @@
       <product data="item" prods-list="prodsList" ng-repeat="item in products | filter: search | isArtGroup: selectedGroup"></product>
     </ul>
 
-
-
-
-
-
-
-
-
-
-
-
     <bag prods-list="prodsList"></bag>
+
+    <modal prods-list="prodsList"></modal>
   </main>
 
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="app.js"></script>
-  <script src="components/bag/bag.component.js"></script>
   <script src="components/product/product.component.js"></script>
+  <script src="components/product/product.service.js"></script>
+  <script src="components/bag/bag.component.js"></script>
+  <script src="components/modal/modal.component.js"></script>
 </body>
 </html>
